--- a/apoyo.html
+++ b/apoyo.html
@@ -86,28 +86,16 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Estructura del Curso</h2>
+    <h2>Links de apoyo</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-              <article>
-                    <figure>
-                        <img id="apDiv28" src="img/SeguridadInformatica.JPG" alt="SeguridadInformatica" title="Estructura del curso">
-                  	</figure>
-                      
-               <ul class="menu2">
-                  <li>
-                    <a href="informaciongeneral.html" class="menu2">Información general
-                    </a>
-                  </li>
-                  <li>
-                    <a href="objetivos.html" class="menu2">Objetivos
-                    </a>
-                  </li> 
-                  <li>
-                    <a href="apoyo.html" class="menu2">Videos y URLs de apoyo
-                    </a>
-                  </li>
-                </ul>                    
+            <article>
+              <iframe class="iframe" src="https://www.youtube.com/embed/mGAHdv8CyPc?list=PLBoO5D1LJo46cqMwVUidI-IW5Z5tFAjdm" frameborder="0" allowfullscreen></iframe>
+
+              <p></p>
+
+              <iframe class="iframe" src="https://www.youtube.com/embed/kamEjPUoVHc" frameborder="0" allowfullscreen></iframe>                   
       			</article>
+
     </section>
     <aside> 
                 <div id="apDiv5">
