--- a/informaciongeneral.html
+++ b/informaciongeneral.html
@@ -7,7 +7,7 @@
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB, SEGURIDAD INFORMATICA" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>Seguridad Informática</title>
+        <title>Información general</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
@@ -86,28 +86,54 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Estructura del Curso</h2>
+    <h2>Información general</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-              <article>
-                    <figure>
-                        <img id="apDiv28" src="img/SeguridadInformatica.JPG" alt="SeguridadInformatica" title="Estructura del curso">
-                  	</figure>
+          <article>
+
+              <figure>
+                <img class="apDiv29" src="img/seguridad.jpg" alt="">
+              </figure>
+              <h2>Descripción del curso</h2>
+              <p> En la actualidad los recursos       informáticos y el uso de nuevas tecnologías para el procesamiento de
+                  información hacen parte de todas las organizaciones, y temas como seguridad en la información cobran
+                  más vigencia.
+                  El curso de Seguridad informática, pretende orientar a los estudiantes en los fundamentos de seguridad
+                  de la información, comprender las necesidades de proteger, salvaguardar la información de las empresas
+                  y mantener disponibles los servicios de redes y comunicaciones.
+                  En la unidad 1, Fundamentos de seguridad de la información; presenta los conceptos fundamentales
+                  necesarios para la comprensión de la seguridad, de los actores de la inseguridad, la necesidad de
+                  prevenir incidentes, los diferentes tipos de amenazas, la Criptografía, los conceptos básicos de seguridad
+                  en sistemas operativos.
+                </p>
+             <table class="table">
+                <tr class="Tr">
+                  <td class="Td">
+                  ESCUELA:              
+                  </td>
+                  <td class="Td">
+                  Escuela Ciencias Básicas, Tecnología e Ingeniería
+                  </td>
+                </tr>
+                <tr class="Tr">
+                  <td class="Td">
+                  TIPO DE CURSO:
+                  </td>
+                  <td class="Td">
+                  Teórico-Práctico
+                  </td>
+                  </tr>
+                <tr class="Tr">
+                  <td class="Td">
+                  DIRECTOR DEL CURSO:
+                  </td>
+                  <td class="Td">
+                  Manuel Antonio Sierra Rodríguez
+                  </td>
+                </tr>
+              </table>
                       
-               <ul class="menu2">
-                  <li>
-                    <a href="informaciongeneral.html" class="menu2">Información general
-                    </a>
-                  </li>
-                  <li>
-                    <a href="objetivos.html" class="menu2">Objetivos
-                    </a>
-                  </li> 
-                  <li>
-                    <a href="apoyo.html" class="menu2">Videos y URLs de apoyo
-                    </a>
-                  </li>
-                </ul>                    
-      			</article>
+                            
+      		</article>
     </section>
     <aside> 
                 <div id="apDiv5">
