--- a/objetivos.html
+++ b/objetivos.html
@@ -86,28 +86,38 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Estructura del Curso</h2>
+    
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-              <article>
-                    <figure>
-                        <img id="apDiv28" src="img/SeguridadInformatica.JPG" alt="SeguridadInformatica" title="Estructura del curso">
-                  	</figure>
-                      
-               <ul class="menu2">
-                  <li>
-                    <a href="informaciongeneral.html" class="menu2">Información general
-                    </a>
-                  </li>
-                  <li>
-                    <a href="objetivos.html" class="menu2">Objetivos
-                    </a>
-                  </li> 
-                  <li>
-                    <a href="apoyo.html" class="menu2">Videos y URLs de apoyo
-                    </a>
-                  </li>
-                </ul>                    
-      			</article>
+            <article>
+              <h2>Objetivos generales del curso</h2>
+              <p>
+                 El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para
+                la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.
+              </p>
+              <p>
+                 El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis,
+                evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar
+                los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.                
+              </p>
+              <p>
+                 El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas
+                operativos y de red, los tipos de control existentes y su integración dentro de las políticas y
+                procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.     
+              </p>
+              <p>
+                 El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el
+                proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de
+                soluciones de acuerdo al estándar y metodología aplicados.
+             </p>
+             <p>
+               El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.               
+             </p>
+
+             <figure>
+                <img id="apDiv30" src="img/seguridad2.JPG" alt="SeguridadInformatica">
+             </figure>
+
+      		</article>
     </section>
     <aside> 
                 <div id="apDiv5">
