--- a/multimedia.html
+++ b/multimedia.html
@@ -85,19 +85,34 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                                                                    </div>
     <section>
-    <!--<h2>Diseño de Sitios Web - UNAD ECBTI</h2>
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-                <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                        </figure>
-                    <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
-                    </p>
-                        </article>-->
+   <br> </br>
+   <div>
+   <video src="videos/Seguridad-Informática-UNAD.ogv" poster="videos/Seguridad-Informática-UNAD..jpg" width="500" autoplay loop controls></video>
+   </div>
+
+   <br> </br>
+   <br> </br>
+    <text><font color="BLACK">Audio segúridad informática </font> </text>
+  <br> </br>
+                   
+   
+ <audio id="demo" src="img/Audio.mp3"></audio>
+<div>
+  <button onclick="document.getElementById('demo').play()">Reproducir el Audio</button>
+  <button onclick="document.getElementById('demo').pause()">Pausar el Audio</button>
+  <button onclick="document.getElementById('demo').volume+=0.1">Aumentar el Volumen</button>
+  <button onclick="document.getElementById('demo').volume-=0.1">Disminuir el Volumen</button>
+</div>
+		
+    <text><font color="BLACK">Recomendaciones</font> </text>
+	<br> </br>
+    <iframe width="500" height="200" src="https://www.youtube.com/embed/t-x73w1N1os" frameborder="0" allowfullscreen></iframe>
+		
+		
+		
+		
+		
+
     </section>
     <aside> 
                 <div id="apDiv5">
