Actualización Autores Tatiana

--- a/autores.html
+++ b/autores.html
@@ -99,7 +99,7 @@
             <ul class="imagen-3">            
             <figure>
               <a href="tatiana.html">
-               <img src="img/tatiana.jpg" alt="Tatiana"/>
+               <img width="101" height="300" src="img/tatiana.jpg" alt="Tatiana"/>
                 <figcaption>
                 <h2>Conoce mas de Tatiana</h2>
                 <p>Da click a la imagen para Conocer mas de ella</p>
