--- a/multimedia.html
+++ b/multimedia.html
@@ -96,7 +96,7 @@
   <br> </br>
                    
    
- <audio id="demo" src="img/Audio.mp3"></audio>
+ <audio id="demo" src="videos/Audio.mp3"></audio>
 <div>
   <button onclick="document.getElementById('demo').play()">Reproducir el Audio</button>
   <button onclick="document.getElementById('demo').pause()">Pausar el Audio</button>
