--- a/tatiana.html
+++ b/tatiana.html
@@ -90,8 +90,10 @@
       <article>
         <h2>Acerca de Tatiana</h2>
         <figure>
-          <img id="ImgFamilia"src="" alt="">
-        </figure>        
+          <img width="250" height="300" src="img/tatiana_dos.jpg" alt="">
+        </figure>  
+   <p>Tatiana tiene 27 años es estudiante de ingenieria de sistemas, trabaja como análista de sistemas le gusta la programación ver peliculas o series compartir con la familia y escuchar música en especial el rock. </p>
+	
         <p></p>
 
 
