Actualización menu Guías de Aprendizaje

--- a/actividades.html
+++ b/actividades.html
@@ -34,9 +34,9 @@
                     <li><a href="" class="menu">Submenu 3</li>
                   </ul>
                 </li> 
-                <li><a href="multimedia.html" class="menu">Multimedia</a>
+               <li><a href="multimedia.html" class="menu">Multimedia</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="multimedia_dos.html" class="menu">Guias De Seguridad</li>
                   </ul>
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
