--- a/multimedia.html
+++ b/multimedia.html
@@ -10,6 +10,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
+		<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="img/engine1/style.css" />
+<script type="text/javascript" src="img/engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 </head>
 <body>
  <Div id="contenidos">
@@ -32,9 +36,9 @@
                     <li><a href="" class="menu">Submenu 3</li>
                   </ul>
                 </li> 
-                <li><a href="multimedia.html" class="menu">Multimedia</a>
+               <li><a href="multimedia.html" class="menu">Multimedia</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="multimedia_dos.html" class="menu">Guias De Seguridad</li>
                   </ul>
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
@@ -87,30 +91,39 @@
     <section>
    <br> </br>
    <div>
-   <video src="videos/Seguridad-Informática-UNAD.ogv" poster="videos/Seguridad-Informática-UNAD..jpg" width="500" autoplay loop controls></video>
    </div>
 
    <br> </br>
    <br> </br>
-    <text><font color="BLACK">Audio segúridad informática </font> </text>
+    <text><font color="BLACK">segúridad informática </font> </text>
   <br> </br>
                    
-   
- <audio id="demo" src="videos/Audio.mp3"></audio>
-<div>
-  <button onclick="document.getElementById('demo').play()">Reproducir el Audio</button>
-  <button onclick="document.getElementById('demo').pause()">Pausar el Audio</button>
-  <button onclick="document.getElementById('demo').volume+=0.1">Aumentar el Volumen</button>
-  <button onclick="document.getElementById('demo').volume-=0.1">Disminuir el Volumen</button>
-</div>
-		
-    <text><font color="BLACK">Recomendaciones</font> </text>
-	<br> </br>
-    <iframe width="500" height="200" src="https://www.youtube.com/embed/t-x73w1N1os" frameborder="0" allowfullscreen></iframe>
-		
-		
-		
-		
+   <!-- Start WOWSlider.com BODY section -->
+<div id="wowslider-container1">
+<div class="ws_images"><ul>
+		<li><img src="img/data1/images/1.jpg" alt="1" title="1" id="wows1_0"/></li>
+		<li><img src="img/data1/images/2.jpg" alt="2" title="2" id="wows1_1"/></li>
+		<li><img src="img/data1/images/3.jpg" alt="3" title="3" id="wows1_2"/></li>
+		<li><img src="img/data1/images/4.jpg" alt="4" title="4" id="wows1_3"/></li>
+		<li><img src="img/data1/images/5.jpg" alt="5" title="5" id="wows1_4"/></li>
+		<li><a href="http://wowslider.com/vi"><img src="img/data1/images/6.jpg" alt="slider" title="6" id="wows1_5"/></a></li>
+		<li><img src="img/data1/images/7.jpg" alt="7" title="7" id="wows1_6"/></li>
+	</ul></div>
+	<div class="ws_bullets"><div>
+		<a href="#" title="1"><span><img src="img/data1/tooltips/1.jpg" alt="1"/>1</span></a>
+		<a href="#" title="2"><span><img src="img/data1/tooltips/2.jpg" alt="2"/>2</span></a>
+		<a href="#" title="3"><span><img src="img/data1/tooltips/3.jpg" alt="3"/>3</span></a>
+		<a href="#" title="4"><span><img src="img/data1/tooltips/4.jpg" alt="4"/>4</span></a>
+		<a href="#" title="5"><span><img src="img/data1/tooltips/5.jpg" alt="5"/>5</span></a>
+		<a href="#" title="6"><span><img src="img/data1/tooltips/6.jpg" alt="6"/>6</span></a>
+		<a href="#" title="7"><span><img src="img/data1/tooltips/7.jpg" alt="7"/>7</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">wowslider</a> by WOWSlider.com v8.7</div>
+<div class="ws_shadow"></div>
+</div>	
+<script type="text/javascript" src="img/engine1/wowslider.js"></script>
+<script type="text/javascript" src="img/engine1/script.js"></script>
+<!-- End WOWSlider.com BODY section -->
+
 		
 
     </section>
