--- a/multimedia_dos.html
+++ b/multimedia_dos.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="es" class"no-js">
-    <!-- comentario  -->
-    <head>
- 		<meta charset="UTF-8">
-        <meta content="mauricio perdomo" name="author"/>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+		<meta content="Cristhiam Guerrero" name="author"/>
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB, SEGURIDAD INFORMATICA" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>Seguridad Informática</title>
+        <title>SI - Multimedia</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
-     </head>
-    <body>	
-        <Div id="contenidos">
+</head>
+<body>
+ <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
                   <div id="apDiv24">OVA Seguridad Informática
                    - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-        	<p>&nbsp;</p>
-   			<p>&nbsp;</p>
+                <p>&nbsp;</p>
+                        <p>&nbsp;</p>
             <p>&nbsp;</p>
-    		<nav>
+                <nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
@@ -33,7 +32,7 @@
                     <li><a href="" class="menu">Submenu 3</li>
                   </ul>
                 </li> 
-                  <li><a href="multimedia.html" class="menu">Multimedia</a>
+                 <li><a href="multimedia.html" class="menu">Multimedia</a>
                   <ul>
                     <li><a href="multimedia_dos.html" class="menu">Guias De Seguridad</li>
                   </ul>
@@ -48,15 +47,15 @@
                 </li>
                 <div id="apDiv19">
                 <center>
-                	<div id="cuentavisitas"></div>
-					 	<script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
+                        <div id="cuentavisitas"></div>
+                                                <script>yu=function(id){return document.getElementById(id);}
+                                                        if(localStorage){
+                                                        if(localStorage['visitas']==undefined){
+                                                        localStorage['visitas']=0;
+                                                        }var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
+                                                        var num=localStorage['visitas'];
+                                                        var mensaje=num + " visitas";
+                                                         yu('cuentavisitas').innerHTML=mensaje;}
             </script>
                 </center></div>
                 <div id="apDiv4">
@@ -69,7 +68,7 @@
                 </div> 
               </ul>
                  <div id="apDiv3">    
-               	   <form method="get" action="http://www.google.es/search">
+                   <form method="get" action="http://www.google.es/search">
                     <input type="hidden" name="ie" value="UTF-8" />
                     <input type="hidden" name="oe" value="UTF-8" />
                     <input type="text" id="s" name="q" value="" size="12" />
@@ -84,40 +83,36 @@
                    </form>
                 </div>
              </nav>
-            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
+            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                                                                    </div>
     <section>
-    
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-            <article>
-              <h2>Objetivos generales del curso</h2>
-              <p>
-                 El estudiante adquiere conceptos sobre seguridad de la información, desarrolla las habilidades para
-                la identificación de vulnerabilidades, amenazas y riesgos de seguridad informáticos y de la información.
-              </p>
-              <p>
-                 El estudiante conoce e identifica los estándares que debe usar para los procesos de análisis,
-                evaluación y gestión de los riesgos y los estándares de buenas prácticas que ayudarán a identificar
-                los controles que deben existir en las organizaciones de acuerdo a esas buenas prácticas.                
-              </p>
-              <p>
-                 El estudiante adquiere los conceptos fundamentales para de identificar debilidades en los sistemas
-                operativos y de red, los tipos de control existentes y su integración dentro de las políticas y
-                procedimientos para la estructuración de Sistemas de gestión de seguridad de la información SGSI.     
-              </p>
-              <p>
-                 El estudiante adquiere la capacidad de formular y elaborar informes y documentación sobre el
-                proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de
-                soluciones de acuerdo al estándar y metodología aplicados.
-             </p>
-             <p>
-               El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.               
-             </p>
+   <br> </br>
+   <div>
+   <video src="videos/Seguridad-Informática-UNAD.ogv" poster="videos/Seguridad-Informática-UNAD..jpg" width="500" autoplay loop controls></video>
+   </div>
 
-             <figure>
-                <img id="apDiv30" src="img/seguridad2.JPG" alt="SeguridadInformatica">
-             </figure>
+   <br> </br>
+   <br> </br>
+    <text><font color="BLACK">Audio segúridad informática </font> </text>
+  <br> </br>
+                   
+   
+ <audio id="demo" src="videos/Audio.mp3"></audio>
+<div>
+  <button onclick="document.getElementById('demo').play()">Reproducir el Audio</button>
+  <button onclick="document.getElementById('demo').pause()">Pausar el Audio</button>
+  <button onclick="document.getElementById('demo').volume+=0.1">Aumentar el Volumen</button>
+  <button onclick="document.getElementById('demo').volume-=0.1">Disminuir el Volumen</button>
+</div>
+		
+    <text><font color="BLACK">Recomendaciones</font> </text>
+	<br> </br>
+    <iframe width="500" height="200" src="https://www.youtube.com/embed/t-x73w1N1os" frameborder="0" allowfullscreen></iframe>
+		
+		
+		
+		
+		
 
-      		</article>
     </section>
     <aside> 
                 <div id="apDiv5">
@@ -126,23 +121,27 @@
                 <div id="apDiv6"><span style="text-align: justify;">
                 <iframe src='js/slider.html' width='260' height='180' frameborder='0'></iframe>    
                 </span>
-      			</div>
-              	<div id="apDiv7">
+                        </div>
+                <div id="apDiv7">
                 <div id="apDiv12">Ubicación Sede Nacional</div>
-      			</div>
-      			<div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                        </div>
+                        <div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
               <div id="apDiv15"></div>
               <div id="apDiv16">Nuestra ECBTI</div>
       <div id="apDiv18"><iframe width="260" height="180" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
-    	</aside>
-		<Footer>
+        </aside>
+                <Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por: Grupo: 301122_25, estudiantes del programa Ing. de Sistemas </div>
-		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Jose Acevedo y Gomez - 2016</div>
-    	</Footer>
+                  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
+                  <div id="apDiv27">CEAD Jose Acevedo y Gomez - 2016</div>
+        </Footer>
    </body>
     <script src="js/modernizr.js"></script>   
     <script src="js/prefixfree.min.js"></script>
-    <script src="js/jquery-2.1.1.js"></script>   
+    <script src="js/jquery-2.1.1.js"></script>
+
+
+	
+</body>
 </html>
