--- a/edson.html
+++ b/edson.html
@@ -90,9 +90,9 @@
       <article>
         <h2>Acerca de Edson</h2>
         <figure>
-          <img id="ImgFamilia"src="" alt="">
+          <img width="250" height="300" src="img/edson_dos.jpg" alt="Edson">
         </figure>        
-        <p></p>
+        <p>Edson tiene 29 años, estudiante de Ingenieria de sistemas. trabajador independiente, le gusta compartir su tiempo con su familia y sus amigos. le gusta hacer deporte y las series anime.</p>
 
 
       <h2>Información de Contacto</h2>
