--- a/lecturas.html
+++ b/lecturas.html
@@ -86,7 +86,12 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                                                                    </div>
     <section>
     
-     <h2>Que es la seguridad informatica?</h2>
+     <h1>Que es la seguridad informatica?</h1>
+	    
+	    La seguridad informatica se refiere a todas aquellas practicas
+	    que se toman para impedir que se realicen actividades no
+	    autorizadas en dispositivo o sistema informatico causando algun
+	    daño en la informacion o en nuestros equipos. 
     <!--<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
