--- a/autores.html
+++ b/autores.html
@@ -33,9 +33,9 @@
                     <li><a href="" class="menu">Submenu 3</li>
                   </ul>
                 </li> 
-                <li><a href="multimedia.html" class="menu">Multimedia</a>
+                 <li><a href="multimedia.html" class="menu">Multimedia</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="multimedia_dos.html" class="menu">Guias De Seguridad</li>
                   </ul>
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
@@ -99,7 +99,7 @@
             <ul class="imagen-3">            
             <figure>
               <a href="tatiana.html">
-               <img src="img/tatiana.jpg" alt="Tatiana"/>
+               <img width="101" height="300" src="img/tatiana.jpg" alt="Tatiana"/>
                 <figcaption>
                 <h2>Conoce mas de Tatiana</h2>
                 <p>Da click a la imagen para Conocer mas de ella</p>
