--- a/tatiana.html
+++ b/tatiana.html
@@ -33,9 +33,9 @@
                     <li><a href="" class="menu">Submenu 3</li>
                   </ul>
                 </li> 
-                <li><a href="multimedia.html" class="menu">Multimedia</a>
+                  <li><a href="multimedia.html" class="menu">Multimedia</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="multimedia_dos.html" class="menu">Guias De Seguridad</li>
                   </ul>
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
@@ -90,8 +90,10 @@
       <article>
         <h2>Acerca de Tatiana</h2>
         <figure>
-          <img id="ImgFamilia"src="" alt="">
-        </figure>        
+          <img width="250" height="300" src="img/tatiana_dos.jpg" alt="">
+        </figure>  
+   <p>Tatiana tiene 27 años es estudiante de ingenieria de sistemas, trabaja como análista de sistemas le gusta la programación ver peliculas o series compartir con la familia y escuchar música en especial el rock. </p>
+	
         <p></p>
 
 
