--- a/autores.html
+++ b/autores.html
@@ -30,7 +30,7 @@
                   <ul>
                     <li><a href="lectura1.html" class="menu">PDCA</li>
                     <li><a href="lectura2.html" class="menu">AMENAZAS</li>
-                    <li><a href="lectura3.html" class="menu">CLASIFICACION</li>
+                    <li><a href="lectura3.html" class="menu">CLASIFICACION.</li>
                   </ul>
                 </li> 
                  <li><a href="multimedia.html" class="menu">Multimedia</a>
