--- a/multimedia.html
+++ b/multimedia.html
@@ -95,7 +95,7 @@
 
    <br> </br>
    <br> </br>
-    <text><font color="BLACK">segúridad informática </font> </text>
+    <h2>Seguridad informática</h2>
   <br> </br>
                    
    <!-- Start WOWSlider.com BODY section -->
