--- a/multimedia_dos.html
+++ b/multimedia_dos.html
@@ -92,7 +92,7 @@
 
    <br> </br>
    <br> </br>
-    <text><font color="BLACK">Audio segúridad informática </font> </text>
+    <h2> Audio seguridad informática</h2>
   <br> </br>
                    
    
