--- a/lectura3.html
+++ b/lectura3.html
@@ -119,6 +119,11 @@ La seguridad física es aquella que trata de proteger el hardware (los equipos i
 
 La seguridad lógica complementa a la seguridad física, protegiendo el software de los equipos informáticos, es decir, las aplicaciones y los datos de usuario, de robos, de pérdida de datos, entrada de virus informáticos, modificaciones no autorizadas de los datos, ataques desde la red, etc.
 
+ <br>
+ <br>
+ <br>
+ <br>
+ infosegur,clasificacion de seguridad, https://infosegur.wordpress.com/unidad-1/clasificacion-de-seguridad/
 
 
 
@@ -130,9 +135,7 @@ La seguridad lógica complementa a la seguridad física, protegiendo el software
 
 
 
-
-
-      </p>
+	    </p>
     <!--<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
