--- a/lectura2.html
+++ b/lectura2.html
@@ -102,7 +102,12 @@
 	    
 	    <p>
          Los usuarios, ya que a menudo sus acciones premeditadas o no premeditadas desencadenan episodios de vulnerabilidad al sistema. Por ejemplo, al descargar archivos peligrosos o borrar archivos importantes para el sistema. Al mismo tiempo, programas maliciosos como virus o malware. También, intrusos como hackers que ingresan al sistema sin autorización con propósitos perjudiciales. Incluso, también se considera una amenaza a siniestros como incendios o inundaciones que tienen un efecto devastador para una computadora.
-      </p> 
+          <br>
+	    <br>
+	    <br>
+	    <br>
+		    definicionabc,cuales son las amenazas para un sistema informatico, http://www.definicionabc.com/tecnologia/seguridad-informatica.php
+	    </p> 
     <!--<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
