--- a/lectura1.html
+++ b/lectura1.html
@@ -115,8 +115,8 @@
       <br>
 		    
 		    
-       <p> Universidad Unam Mexico,Que es la seguridad informatica? http://redyseguridad.fi-p.unam.mx/proyectos/buenaspracticas/definicionseguridadinfo.html
-
+        Universidad Unam Mexico,Que es la seguridad informatica? http://redyseguridad.fi-p.unam.mx/proyectos/buenaspracticas/definicionseguridadinfo.html
+	    </p>
     <!--<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
